# afmt

./: u  .afmt.toml  .afmt.toml_back  .envrc  .gitattributes  .gitignore  :w  ;  CHANGELOG.md  Cargo.toml  Config.md  README.md  [ ;:w ]  build.rs  deny.toml  hello.cls  index.html  package-lock.json  package.json  profile.json  temp.1  temp.txt  test.cls  test_back.cls
.github/workflows/: build-binaries.yml  flame_graph.yml  flamegraph.yml  hyperfine.yml  mdbook.yml  perf.yml  pr-ci-merge-main.yml  publish-creates-io-in-tag.yml  release-please-main.yml  release.yml
benches/: afmt_benchmark.rs
dep/: build_parser_and_wasm.sh  parser_info.md  technical.md  update_parser_version.sh
doc/: Settings.md  Technical.md
docs/: README.md  SUMMARY.md  book.toml  results.md  summary.md
docs/book/: 404.html  benchmark.html  criterion.html  hyperfine.html  index.html  intro.html  print.html  results.html  searchindex.js  searchindex.json
docs/src/: SUMMARY.md  (+5 more)
md/: Settings.md  TODO.md  Technical.md  VSCode_Setup.md
pkg/: index.html  index2.html  package.json
samples/: 1.cls  ACCT_IndividualAccounts_TEST.cls
scripts/: install-afmt.ps1  install-afmt.sh
src/: 1.json  accessor.rs  args.rs  child.rs  config.rs  context.rs  data_model.rs  doc.rs  doc_builder.rs  enrich.rs  enrich_def.rs  enrich_macro.rs  enrich_nodes.rs  enum_def.rs  exp.rs  extension.rs  first_pass_data_model.rs  fmt_push.rs  format.rs  formatter.rs  lib.rs  macros.rs  main.rs  message_helper.rs  node.rs  node_child.rs  node_comment.rs  node_ext.rs  node_struct.rs  node_structs.rs  node_to_doc.rs  node_visit.rs  notation.rs  parser.rs  print.rs  rewrite.rs  rich_def.rs  rich_macro.rs  rich_node.rs  route.rs  (+9 more)
temp/: 1.ts  pretty.ts
test/: 1.cls
tests/: 1.cls  c6.cls  matching_tests.rs  prettier.rs  prettier.rs1  prettier_benchmark.rs  static.rs  static.rs1  test.rs
(+878 files in other folders)
