[package]
name = "afmt"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
similar = "2.6.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "afmt_benchmark"
harness = false

[dependencies]
anyhow = "1.0.86"
clap = "4.5.16"
colored = "2.1.0"
env_logger = "0.11.5"
log = "0.4.22"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
# serde_json = "1.0.132"
toml = "0.8.19"
tree-sitter = "0.24.3"
typed-arena = "2.0.2"

[build-dependencies]
cc = "1.1.10"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
