[package]
name = "afmt"
version = "0.1.2"
edition = "2021"
description = "An Salesforce Apex lang formatter"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
similar = "2.6.0"
# criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "afmt_benchmark"
harness = false

[dependencies]
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
clap = "4.5.16"
toml = "0.8.19"
typed-arena = "2.0.2"
wasm-bindgen = "0.2.99"
tree-sitter = "0.24.3"
tree-sitter-sfapex = "2.4.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
