[package]
name = "sf-afmt"
version = "0.12.2"
edition = "2021"
description = "An Salesforce Apex lang formatter"
license = "MIT OR Apache-2.0"

[[bin]]
name = "afmt"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
similar = "2.6.0"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
clap = "4.5.16"
toml = "0.8.19"
typed-arena = "2.0.2"
tree-sitter = "0.24.3"
tree-sitter-sfapex = "2.4.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
